fix scrollbar

--- a/web/assets/css/project.css
+++ b/web/assets/css/project.css
@@ -1,6 +1,7 @@
 #myKanban {
   overflow: auto;
   white-space: nowrap;
+  height: 100%;
 }
 .kanban-drag {
   display: flex;
@@ -17,7 +18,9 @@
   width: 100%;
   flex: 0;
   vertical-align: top;
-  height:70px;
+  height:auto;
+  overflow-wrap: normal;
+  white-space: normal;
 }
 .kanban-board .kanban-board-header{
   justify-content: space-between;
@@ -55,4 +58,29 @@
 margin-bottom: 10px;}
 .new-item-button{
   margin-left: 10px;
+}
+
+ /*
+ *  STYLE 1
+ */
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.247);
+	border-radius: 10px;
+	background-color: #ffffff;
+}
+
+::-webkit-scrollbar
+{
+  height: 9px;
+	width: 9px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.062);
+	background-color: #6777ef;
 }
